--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body onload="func()">
-    <form>
+    <form onsubmit="tekan()">
         Name : <input type="text" name="fname">
         <input type="submit" value="Submit">
     </form>
@@ -22,7 +22,7 @@
 
     <button onclick="funct()">Alert</button>
     <button onclick="fun()">Confirm</button>
-    <button onclick="func()">Prompt</button>
+    <button onclick="promp()">Prompt</button>
 
     <p id="demo"></p>
 
